--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ main {
 html, body {
   width: 100%;
   display: table;
+  height: 100%;
 }
 
 body {
@@ -136,12 +137,9 @@ main {
 }
 
 .bg-intro {
-  background-repeat: no-repeat;
+  background-size: cover;
+  height: 1200px;
   background: url(../imgs/assets/animate-cover1.jpg);
-  min-width: 600px;
-  min-height: 100vh;
-  width: 100%;
-  max-height: 5vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -157,7 +155,6 @@ main {
   font-family: "Bebas Neue", sans-serif;
   color: lightcyan;
 }
-
 .bg-intro .text-cover {
   display: flex;
   flex-direction: column;
@@ -221,6 +218,11 @@ main {
   margin-bottom: 3.2rem;
   font-size: 12vh;
 }
+.title-intro h1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .intro-style {
   display: grid;
@@ -231,14 +233,14 @@ main {
 }
 .intro-style h2 {
   text-align: center;
-  color: black;
+  color: white;
   font-family: "Bebas Neue", sans-serif;
 }
 .intro-style p {
   font-size: 15px;
   margin-top: 1rem;
   text-align: center;
-  color: black;
+  color: white;
   font-family: "Bebas Neue", sans-serif;
   border-bottom: 2px solid white;
 }
@@ -247,7 +249,7 @@ main {
   font-size: 7.2vh;
 }
 .box-intro-style p {
-  font-size: 6vh;
+  font-size: 3.5294117647vh;
 }
 
 .intro-p {
@@ -255,8 +257,19 @@ main {
   margin-top: 10rem;
   margin-bottom: 10rem;
 }
+.intro-p h2 {
+  text-align: center;
+  font-size: 7.2vh;
+  color: white;
+  font-family: "Bebas Neue", sans-serif;
+}
 .intro-p p {
   text-align: center;
+  font-size: 15px;
+  margin-top: 1rem;
+  font-size: 6vh;
+  font-family: "Bebas Neue", sans-serif;
+  border-bottom: 2px solid white;
 }
 
 /* contacto */
@@ -610,6 +623,5 @@ footer hr {
     align-items: center;
   }
 }
-
 
 /*# sourceMappingURL=styles.css.map */
