--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -529,19 +529,15 @@ footer hr {
   .flex-text-intro {
     margin-top: 20rem;
   }
-  .nav-grid-btn {
-    display: grid;
-    place-items: center;
-    column-gap: 0;
-  }
-  .nav-center-btn {
-    display: flex;
-    gap: 10px;
+  .nav-center-btn{
+    column-gap: 4rem;
   }
 }
 @media screen and (max-width: 1024px) {
     .nav-grid-btn{
-      column-gap: 2rem;
+    display: flex;
+    flex-direction: column;
+    column-gap: 0;
     }
     .title-intro{
       display: flex;
@@ -553,6 +549,9 @@ footer hr {
       flex-direction: column;
       justify-content: center;
     }
+}
+@media screen and (max-width: 636px){
+  
 }
 @media screen and (max-width: 500px) {
   .info-grid {
@@ -586,10 +585,14 @@ footer hr {
   .text-cover{
     margin-top: 5rem;
   }
-  .nav-grid-btn{
-    display: flex;
-    flex-direction: column;
-    column-gap: 0;
+  .nav-center-btn{
+    column-gap: 2rem;
+    a{
+      font-size: $fontsizedefault/1.88;
+    }
+  }
+  .nav-grid-btn:nth-child(1){
+    place-items: start;
   }
 }
 @media screen and (min-width: 50px) and (max-width: 1024px) {
