--- a/css/styles.css
+++ b/css/styles.css
@@ -165,13 +165,16 @@ nav {
 }
 
 .container-intro {
-  max-width: 100%;
+  width: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   background: rgb(0, 0, 0);
   background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(85, 28, 28) 49%, rgb(0, 0, 0) 100%);
+}
+.container-intro iframe {
+  margin-top: 10rem;
 }
 
 .intro-group h1 {
@@ -525,6 +528,12 @@ footer hr {
   .intro-p p, .intro-p h2 {
     text-align: left;
   }
+  .box-intro-style h2 {
+    font-size: 45px;
+  }
+  .box-intro-style p {
+    font-size: 35px;
+  }
 }
 @media only screen and (min-width: 701px) {
   /* hide the hamburger */
@@ -571,7 +580,6 @@ footer hr {
     column-gap: 12rem;
   }
   .nav-center-btn a {
-    font-size: 30px;
     color: white;
   }
 }
