--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -601,8 +601,8 @@ footer hr {
   grid-template-columns: 150px 100px;
   place-content: start;
   button{
-    margin-top: 2rem;
-    margin-left: 50rem;
+    // margin-top: 2rem;
+    // margin-left: 30rem;
     height: 70px;
     width: 50px;
   }
